# sinen_app

./: .gitignore  .gitmodules  Android.mk  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  index.data  index.js  index.wasm  main.js  main.wasm  model_convert.bat  pre.js  sinen  untitled.fbx
.github/workflows/: android.yml  cmake.yml  emscripten.yml  linux.yml  mingw.yml
android-project/app/jni/: CMakeLists.txt
assets/Model/: player.sim
assets/Shader/GL/: shader.frag  shaderPlain.frag
assets/Shader/GLES/: shader.frag  shader.vert  shaderPlain.frag
assets/Shader/Vulkan/: compile.bat  shader.vert.spv  shaderOpaque.frag.spv  vkshader.vert  vkshaderOpaque.frag  vkshaderPlain.frag
data/model/: spider.sim
data/script/: enemy.lua  main.lua  scene01.lua  scene02.lua  stage.lua  utility.lua
data/shader/GL/: alpha.frag  shader.vert  shaderPlain.frag  shader_instance.vert
data/shader/GLES/: alpha.frag  shader.frag  shader.vert  shaderPlain.frag
data/shader/Vulkan/: shaderPlain.frag.spv
model_converter/: CMakeLists.txt
model_converter/src/: main.cpp
model_converter/src/Model/: Model.cpp
src/: main.cpp
src/Actor/: Camera.cpp  Camera.hpp  bullet.cpp  bullet.hpp  enemy.cpp  enemy.hpp  player.cpp  player.hpp
src/Scene/: Stage.cpp  Stage.hpp  Title.cpp  Title.hpp
src/abilities/: ability.hpp
src/dungeon/: generator.hpp  map.hpp
src/model/: model.cpp  model.hpp
